<resources>

    <string name="app_name">Simple Note</string>
    <string name="no_data">No data</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Simple Note</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="add_new">Add new</string>
    <string name="edit_menu">Edit</string>
    <string name="menu_save">Save</string>
    <string name="empty_label"> </string>
    <string name="no_item">No title</string>
    <string name="no_comments">No comments</string>
    <string name="deny_label">Permission denied</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="no_empty_title">The title should not be empty</string>
    <string name="data_saved_ok">Data saved</string>
    <string name="search_menu">Search</string>
    <string name="title_dialog">Title</string>
    <string name="image_failure_label">Image loading failure</string>

</resources>
