<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/detail_fragment_padding" >

        <EditText
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_fragment_item_margin_bottom"
            android:layout_marginTop="@dimen/detail_fragment_item_margin_top"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:hint="@string/no_item"
            android:inputType="text"
            android:text="@string/empty_label"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColorHint="@color/hint_color"
            android:textColor="@drawable/edit_text_selector"
            android:textStyle="bold"
            tools:text="Title"
            />

        <EditText
            android:id="@+id/comment_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_fragment_item_margin_bottom"
            android:enabled="false"
            android:gravity="top|start"
            android:hint="@string/no_comments"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:text="@string/empty_label"
            android:textColorHint="@color/hint_color"
            android:textColor="@drawable/edit_text_selector"
            tools:text="Comment"
            />

        <ImageView
            android:id="@+id/cover_imageView"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/image_margin_top"
            tools:src="@drawable/ic_action_search" />

    </LinearLayout>
</ScrollView>
